// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot renders 1`] = `
Array [
  <div
    className="css-1ce784x"
  >
    <nav>
      <ul
        className="drop"
      >
        <input
          className="menu-btn"
          id="menu-btn"
          type="checkbox"
        />
        <label
          className="menu-icon"
          htmlFor="menu-btn"
        >
          <span
            className="nav-icon"
          />
        </label>
        <li
          className="logo"
        >
          <a
            href="#"
          >
            TechFun
          </a>
        </li>
        <li
          className="item"
        >
          <a
            href="#"
          >
            Home
          </a>
        </li>
        <li
          className="item"
        >
          <a
            href="#"
          >
            About
          </a>
        </li>
        <li
          className="item"
        >
          <a
            href="#"
          >
            Services
          </a>
        </li>
        <li
          className="item button"
        >
          <a
            href="#"
          >
            Log In
          </a>
        </li>
        <li
          className="item button secondary"
        >
          <a
            href="#"
          >
            Sign Up
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  <div
    className="css-o6mf5o"
  >
    <div
      className="css-qyry97"
    >
      <h5
        className="css-1cctmdv"
      >
        <input
          name="vegetable"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="veg"
        >
          Vegetable
        </label>
      </h5>
      <h5
        className="css-xivvka"
      >
        <input
          name="meat"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="meat"
        >
          Meat
        </label>
      </h5>
      <h5
        className="css-1750ecm"
      >
        <input
          name="fruit"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="fruit"
        >
          Fruit
        </label>
      </h5>
    </div>
    <div
      className="css-1nakvlf"
    >
      <div
        className="contain"
      >
        <ul
          className="responsive-table"
        >
          <li
            className="table-row"
          >
            <div
              className="cols cols-2"
            >
              Filter
            </div>
            <div
              className="cols cols-2"
              data-label="Vegetable"
            >
              <input
                name="vegetable"
                onChange={[Function]}
                type="checkbox"
              />
            </div>
            <div
              className="cols cols-2"
              data-label="Meat"
            >
              <input
                name="meat"
                onChange={[Function]}
                type="checkbox"
              />
            </div>
            <div
              className="cols cols-2"
              data-label="Fruit"
            >
              <input
                name="fruit"
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
    <main
      className="main-area"
    >
      <div
        className="centered"
      >
        <section
          className="cards"
        />
      </div>
    </main>
  </div>,
]
`;

exports[`Nav snapshot renders 1`] = `
<div
  className="css-1ce784x"
>
  <nav>
    <ul
      className="drop"
    >
      <input
        className="menu-btn"
        id="menu-btn"
        type="checkbox"
      />
      <label
        className="menu-icon"
        htmlFor="menu-btn"
      >
        <span
          className="nav-icon"
        />
      </label>
      <li
        className="logo"
      >
        <a
          href="#"
        >
          TechFun
        </a>
      </li>
      <li
        className="item"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="item"
      >
        <a
          href="#"
        >
          About
        </a>
      </li>
      <li
        className="item"
      >
        <a
          href="#"
        >
          Services
        </a>
      </li>
      <li
        className="item button"
      >
        <a
          href="#"
        >
          Log In
        </a>
      </li>
      <li
        className="item button secondary"
      >
        <a
          href="#"
        >
          Sign Up
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
